Fix navigaion tabs button's horizontal padding in bigger screens when the web is set to a laguage in which the added spaces of the texts of the sections is too long

--- a/src/app/components/appbar/navegacio-tab/navegacio-tab.component.scss
+++ b/src/app/components/appbar/navegacio-tab/navegacio-tab.component.scss
@@ -46,7 +46,7 @@ nav {
         }
         @include gran {
             font-size: 1.5rem;
-            padding: 0.125rem 3rem;
+            padding: 0.125rem 1.6rem;
         }
 
         &.selected {
